# BioPulse_core

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: bad_agent_stub.py  label_projection_knn.py  label_projection_majority.py  svg_random_baseline.py  svg_variance_baseline.py
biopulse/: __init__.py
biopulse/builder/: __init__.py  controls.py  openproblems_adapter.py  pack_writer.py  validate_pack.py
biopulse/runner/: __init__.py  cost.py  evidence.py  harness.py  process_plane.py  run_baseline.py
biopulse/scorers/: __init__.py  common.py  denoising_score.py  dimensionality_reduction_score.py  label_projection_score.py  rare_celltype_score.py  spatially_variable_genes_score.py
biopulse/tasks/: __init__.py  registry.py
examples/label_projection_majority_demo/: evaluation_report.json  evaluator_results.json  evidence_bundle_redacted.json  notes.txt
pricing/: model_aliases.json  price_table.json
scripts/: build_benchmark_packs.py  build_denoising_boards.py  build_denoising_immune_pack.py  build_label_projection_boards.py  build_label_projection_dkd_pack.py  build_rare_celltype_pack.py  publication_guard.py
tests/: test_baselines.py  test_characterization.py  test_control_normalization.py  test_new_task_scorers.py  test_pack_writer.py  test_pack_writer_golden.py  test_rare_celltype_pack.py  test_registry.py  test_scorer_coverage.py
tests/characterization/: cases_denoising.py  cases_dimensionality_reduction.py  cases_label_projection.py  cases_rare_celltype.py  cases_spatially_variable_genes.py  charsnap.py
(+85 files in other folders)
